<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/wyszukiwarka"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/cart_icon"
        android:title="@string/open_cart"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_clear_history"
        android:title="@string/clear_shopping_history"
        app:showAsAction="never" />
</menu>